# vibecoder

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: build-pdf-font.mjs  make-icon.py
src/: App.tsx  styles.css  types.ts  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs
src/components/: ConfirmDialog.tsx  EmptyState.tsx  FormatToolbar.tsx  GenerateModal.tsx  Icon.tsx  NoteEditor.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBadge.tsx  StatusBar.tsx  TemplatesModal.tsx  TitleBar.tsx  Toast.tsx
src/hooks/: useNotes.ts  useSettings.ts  useTemplates.ts  useToast.ts  useUISettings.ts
src/lib/: image.ts  markdown.ts  storage.ts  tauri.ts
