[package]
name = "vibecoder"
version = "1.12.0"
description = "VibeCoder — a minimal desktop inspiration tool: capture ideas, AI polish, custom prompt templates, one-click MVP generation"
edition = "2021"
rust-version = "1.77"
authors = ["ryuuzaki1412"]
license = "MIT"
keywords = ["tauri", "ai", "notes", "polish", "mvp"]
categories = ["productivity", "utilities"]

[lib]
name = "vibecoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
